@@ -13,19 +13,27 @@
 
 package io.openmanufacturing.sds.aspectmodel.java;
 
+import static org.assertj.core.api.Assertions.*;
+
+import java.io.File;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.nio.file.Path;
+import java.time.LocalDate;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 
+import javax.xml.datatype.DatatypeFactory;
 import javax.xml.datatype.XMLGregorianCalendar;
 
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import com.github.javaparser.ast.CompilationUnit;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.reflect.TypeToken;
 
@@ -47,12 +55,23 @@ import io.openmanufacturing.sds.test.TestAspect;
 
 public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTest {
 
+   /**
+    * Tests that code generation succeeds for all test models for the latest meta model version
+    * @param testAspect the injected Aspect model
+    */
+   @ParameterizedTest
+   @EnumSource( value = TestAspect.class )
+   public void testCodeGeneration( final TestAspect testAspect ) {
+      assertThatCode( () ->
+            TestContext.generateStaticAspectCode().apply( getGenerators( testAspect, KnownVersion.getLatest() ) )
+      ).doesNotThrowAnyException();
+   }
+
    @ParameterizedTest
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithOptionalProperties( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_OPTIONAL_PROPERTIES_WITH_ENTITY;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 4 );
       result.assertFields( "MetaAspectWithOptionalPropertiesWithEntity",
             ImmutableMap.<String, Object> builder().put( "NAMESPACE", String.class )
@@ -84,8 +103,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithExtendedEnums( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_EXTENDED_ENUMS;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 8 );
       result.assertFields( "MetaAspectWithExtendedEnums",
             ImmutableMap.<String, Object> builder().put( "NAMESPACE", String.class )
@@ -124,8 +142,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithEither( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_EITHER_WITH_COMPLEX_TYPES;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 6 );
       result.assertFields( "MetaAspectWithEitherWithComplexTypes",
             ImmutableMap.<String, Object> builder().put( "NAMESPACE", String.class )
@@ -158,8 +175,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithMeasurement( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_MEASUREMENT;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
       result.assertFields( "MetaAspectWithMeasurement",
             ImmutableMap.<String, Object> builder().put( "NAMESPACE", String.class )
@@ -175,8 +191,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithRecursiveAspectWithOptional( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_RECURSIVE_PROPERTY_WITH_OPTIONAL;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 4 );
       result.assertFields( "MetaAspectWithRecursivePropertyWithOptional",
             ImmutableMap.<String, Object> builder().put( "NAMESPACE", String.class )
@@ -198,8 +213,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithDuration( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_DURATION;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
       result.assertFields( "MetaAspectWithDuration",
             ImmutableMap.<String, Object> builder().put( "NAMESPACE", String.class )
@@ -215,8 +229,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithCurie( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_CURIE;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
       result.assertFields( "MetaAspectWithCurie",
             ImmutableMap.<String, Object> builder().put( "NAMESPACE", String.class )
@@ -235,8 +248,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithBinary( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_BINARY;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
       result.assertFields( "MetaAspectWithBinary",
             ImmutableMap.<String, Object> builder().put( "NAMESPACE", String.class )
@@ -252,8 +264,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithState( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_STATE;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 3 );
 
       result.assertFields( "MetaAspectWithState",
@@ -269,8 +280,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithConstraints( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_CONSTRAINTS;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
 
       result.assertFields( "MetaAspectWithConstraints",
@@ -315,8 +325,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithStructuredValue( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_NUMERIC_STRUCTURED_VALUE;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
 
       result.assertFields( "MetaAspectWithNumericStructuredValue",
@@ -339,8 +348,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithErrorCollection( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_ERROR_COLLECTION;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 4 );
 
       result.assertFields( "MetaError",
@@ -354,6 +362,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
                   } )
                   .put( "START_TIMESTAMP", new TypeToken<StaticProperty<XMLGregorianCalendar>>() {
                   } )
+                  .put( "_datatypeFactory", DatatypeFactory.class )
                   .build(), new HashMap<>() );
 
       result.assertFields( "MetaAspectWithErrorCollection",
@@ -362,6 +371,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
                   .put( "CHARACTERISTIC_NAMESPACE", String.class )
                   .put( "INSTANCE", "MetaAspectWithErrorCollection" )
                   .put( "ITEMS", "StaticContainerProperty<Error,Collection<Error>>" )
+                  .put( "_datatypeFactory", DatatypeFactory.class )
                   .build(), new HashMap<>() );
    }
 
@@ -369,8 +379,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithCollectionAndSimpleElementCharacteristic( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_COLLECTION_AND_SIMPLE_ELEMENT_CHARACTERISTIC;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
 
       result.assertFields( "MetaAspectWithCollectionAndSimpleElementCharacteristic",
@@ -386,8 +395,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithCollectionAndElementCharacteristic( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_COLLECTION_AND_ELEMENT_CHARACTERISTIC;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 4 );
 
       result.assertFields( "MetaAspectWithCollectionAndElementCharacteristic",
@@ -403,8 +411,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithFixedPointConstraints( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_FIXED_POINT;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
 
       result.assertFields( "MetaAspectWithFixedPoint",
@@ -421,8 +428,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testGenerateStaticMetaModelWithComplexEntityCollectionEnumeration( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_COMPLEX_ENTITY_COLLECTION_ENUM;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 7 );
 
       result.assertFields( "MetaAspectWithComplexEntityCollectionEnum",
@@ -454,21 +460,20 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testCharacteristicInstantiationForEnums( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_ENUM_AND_OPTIONAL_ENUM_PROPERTIES;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 3 );
 
       final String expectedTestPropertyCharacteristicConstructorCall = "new DefaultEnumeration("
             + "MetaModelBaseAttributes.from(KnownVersion." + KnownVersion.getLatest() + ", "
             + "AspectModelUrn.fromUrn(NAMESPACE + \"testProperty\"), \"TestEnumeration\"), "
             + "Optional.of(new DefaultScalar(\"http://www.w3.org/2001/XMLSchema#int\", KnownVersion." + KnownVersion.getLatest() + ")), "
-            + "List.of(TestEnumeration.values()))";
+            + "Arrays.asList(TestEnumeration.values()))";
 
       final String expectedOptionalTestPropertyCharacteristicConstructorCall = "new DefaultEnumeration("
             + "MetaModelBaseAttributes.from(KnownVersion." + KnownVersion.getLatest() + ", "
             + "AspectModelUrn.fromUrn(NAMESPACE + \"optionalTestProperty\"), \"TestEnumeration\"), "
             + "Optional.of(new DefaultScalar(\"http://www.w3.org/2001/XMLSchema#int\", KnownVersion." + KnownVersion.getLatest() + ")), "
-            + "List.of(TestEnumeration.values()))";
+            + "Arrays.asList(TestEnumeration.values()))";
 
       result.assertConstructorArgumentForProperties( "MetaAspectWithEnumAndOptionalEnumProperties",
             ImmutableMap.<String, String> builder()
@@ -481,8 +486,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testAspectWithPropertyWithPayloadName( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_PROPERTY_WITH_PAYLOAD_NAME;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
 
       final String expectedPayloadNameArgument = "Optional.of(\"test\")";
@@ -497,8 +501,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testAspectWithBlankNode( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_BLANK_NODE;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
 
       result.assertFields( "MetaAspectWithBlankNode",
@@ -515,8 +518,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testCharacteristicInstantiationForQuantifiableWithoutUnit( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_QUANTIFIABLE_WITHOUT_UNIT;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
 
       final String expectedTestPropertyCharacteristicConstructorCall =
@@ -541,8 +543,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "allVersions" )
    public void testCharacteristicInstantiationForQuantifiableWithUnit( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_QUANTIFIABLE_WITH_UNIT;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 2 );
 
       final String expectedTestPropertyCharacteristicConstructorCall =
@@ -561,8 +562,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "versionsStartingWith2_0_0" )
    public void testGenerateStaticMetaModelForAspectModelWithAbstractEntity( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_ABSTRACT_ENTITY;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 6 );
 
       final String expectedTestPropertyCharacteristicConstructorCall =
@@ -590,8 +590,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
    @MethodSource( value = "versionsStartingWith2_0_0" )
    public void testGenerateStaticMetaModelForAspectModelWithCollectionWithAbstractEntity( final KnownVersion metaModelVersion ) throws IOException {
       final TestAspect aspect = TestAspect.ASPECT_WITH_COLLECTION_WITH_ABSTRACT_ENTITY;
-      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode()
-            .apply( getGenerators( aspect, metaModelVersion, Optional.empty() ) );
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
       result.assertNumberOfFiles( 6 );
 
       final String expectedTestPropertyCharacteristicConstructorCall =
@@ -607,5 +606,41 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
             ImmutableMap.<String, String> builder()
                   .put( "TEST_PROPERTY", expectedTestPropertyCharacteristicConstructorCall )
                   .build(), 1 );
+   }
+
+   @ParameterizedTest
+   @MethodSource( value = "versionsStartingWith2_0_0" )
+   public void testGenerateStaticMetaModelWithoutFileHeader( final KnownVersion metaModelVersion ) throws IOException {
+      final TestAspect aspect = TestAspect.ASPECT_WITH_COMPLEX_ENUM;
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion ) );
+      final CompilationUnit aspectClass = result.compilationUnits.get( TestAspect.ASPECT_WITH_COMPLEX_ENUM.getName() );
+      assertThat( aspectClass.getComment() ).isEmpty();
+      final CompilationUnit enumeration = result.compilationUnits.get( "EvaluationResults" );
+      assertThat( enumeration.getComment() ).isEmpty();
+      final CompilationUnit entity = result.compilationUnits.get( "EvaluationResult" );
+      assertThat( entity.getComment() ).isEmpty();
+      final CompilationUnit staticAspectClass = result.compilationUnits.get( "MetaAspectWithComplexEnum" );
+      assertThat( staticAspectClass.getComment() ).isEmpty();
+      final CompilationUnit staticEntity = result.compilationUnits.get( "MetaEvaluationResult" );
+      assertThat( staticEntity.getComment() ).isEmpty();
+   }
+
+   @ParameterizedTest
+   @MethodSource( value = "versionsStartingWith2_0_0" )
+   public void testGenerateAspectWithFileHeader( final KnownVersion metaModelVersion ) throws IOException {
+      final String currentWorkingDirectory = System.getProperty( "user.dir" );
+      final File templateLibFile = Path.of( currentWorkingDirectory, "/templates", "/test-macro-lib.vm" ).toFile();
+
+      final TestAspect aspect = TestAspect.ASPECT_WITH_COMPLEX_ENUM;
+      final StaticClassGenerationResult result = TestContext.generateStaticAspectCode().apply( getGenerators( aspect, metaModelVersion, true,
+            templateLibFile ) );
+
+      final int currentYear = LocalDate.now().getYear();
+      final String expectedCopyright = String.format( "Copyright (c) %s OMP Test Inc. All rights reserved", currentYear );
+      result.assertCopyright( TestAspect.ASPECT_WITH_COMPLEX_ENUM.getName(), expectedCopyright );
+      result.assertCopyright( "EvaluationResults", expectedCopyright );
+      result.assertCopyright( "EvaluationResult", expectedCopyright );
+      result.assertCopyright( "MetaAspectWithComplexEnum", expectedCopyright );
+      result.assertCopyright( "MetaEvaluationResult", expectedCopyright );
    }
 }
